Fixed bookmark on mobile

--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -85,10 +85,10 @@
 	position: relative;
 }
 
-
+/* 
 #bookmark-wrapper:hover #bookmark-manager {
 	display: block;
-}
+} */
 
 .anime-card {
 	padding: 0.2rem;
@@ -104,7 +104,7 @@
 
 #bookmark-manager {
 	display: none;
-	max-width: 20rem;
+	width: 20rem;
 	max-height: auto;
 	padding: 0.5rem;
 	background-color: #E0E3DA;
@@ -130,6 +130,10 @@
 		max-width: 100%;
 		display: grid;
 		grid-template-columns: repeat(1, 1fr);
+	}
+
+	#bookmark-manager {
+		width: auto;
 	}
 
 	#anime-bookmark-container .anime-card .anime-description {
